Fix handling of borders in clip:; particularly important if the length is auto. RTL handling left as following my reading of the spec and not other browsers' behavior.

BUG:166830

svn path=/branches/KDE/4.1/kdelibs/; revision=846526